<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/userLoginFragment">

    <fragment
        android:id="@+id/userLoginFragment"
        android:name="com.android.nearlabs.main.view.login.NearLabsLoginFragment"
        android:label="@string/user_login"
        tools:layout="@layout/fragment_near_labs_login">
        <action
            android:id="@+id/action_userLoginFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>

    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.android.nearlabs.main.view.verification.VerificationFragment"
        android:label="@string/verification"
        tools:layout="@layout/fragment_verification">
        <action
            android:id="@+id/action_verificationFragment_to_CreateAccountFragment"
            app:destination="@id/CreateAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateAccountFragment"
        android:name="com.android.nearlabs.main.view.create_account.CreateAccountFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_create_account">
        <action
            android:id="@+id/action_CreateAccountFragment_to_sendGiftFragment"
            app:destination="@id/sendGiftFragment" />
    </fragment>

    <fragment
        android:id="@+id/sendGiftFragment"
        android:name="com.android.nearlabs.main.view.send_gift.SendGiftFragment"
        android:label="@string/send_gift"
        tools:layout="@layout/fragment_send_gift">
        <action
            android:id="@+id/action_sendGiftFragment_to_homeFragment"
            app:destination="@id/homeFragment">
            <argument
                android:name="LIST"
                app:argType="com.android.nearlabs.model.User[]" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.android.nearlabs.main.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
    <argument
        android:name="LIST"
        app:argType="com.android.nearlabs.model.User[]" />
    </fragment>

</navigation>