<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    tools:context=".main.view.verification.VerificationFragment">

    <include
        android:id="@+id/topBarInclude"
        layout="@layout/top_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="33"
        app:indicatorColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarInclude"
        app:trackColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:paddingStart="@dimen/margin_from_left_edge"
        android:paddingEnd="@dimen/margin_from_right_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearProgressIndicator">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/verificationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_message"
            android:textColor="@color/black"
            android:theme="@style/text_16_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/verificationSubTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/johndoe_gmail_com"
            android:textColor="@color/blue"
            android:theme="@style/text_20_px_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationTitleTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/verificationCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/enter_verification_code"
            android:textColor="@color/black"
            android:theme="@style/text_14_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationSubTitleTextView" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:bar_enabled="false"
            app:bar_height="2dp"
            app:height="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verificationCodeTextView"
            app:length="6"
            app:otp_box_background_active="@color/gray"
            app:otp_box_background_inactive="@color/gray"
            app:otp_text_size="@dimen/large_text_size"
            app:width="46dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/gray4"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/text_16_px_regular"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_view" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#E3E3E3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continueButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/not_receive_your_code"
            android:textColor="@color/black"
            android:theme="@style/text_14_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sendAgainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/different_email"
            android:textColor="@color/blue"
            android:theme="@style/text_16_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notCodeTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/resend_your_code"
            android:textColor="@color/blue"
            android:theme="@style/text_16_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sendAgainTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>