<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.create_account.CreateAccountFragment">

    <include
        android:id="@+id/topBarInclude"
        layout="@layout/top_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="66"
        app:indicatorColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarInclude"
        app:trackColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:paddingStart="@dimen/margin_from_left_edge"
        android:paddingEnd="@dimen/margin_from_right_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearProgressIndicator">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account_message"
            android:textColor="@color/light_gray"
            android:theme="@style/text_14_px_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/nameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/light_gray"
                android:theme="@style/text_12_px_regular" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_edittext"
                android:fontFamily="@font/interregular"
                android:hint="@string/ex_john_doe"
                android:textColor="@color/gray3"
                android:textSize="@dimen/medium_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/walletLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLinearLayout">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="20dp"
                android:text="@string/wallet_id"
                android:textColor="#2F80ED"
                android:theme="@style/text_12_px_regular" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/walletEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_edittext"
                android:fontFamily="@font/interregular"
                android:hint="@string/yourname_near"
                android:textColor="@color/gray3"
                android:textSize="@dimen/medium_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gray4"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/text_16_px_regular"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/walletLinearLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/term_and_conditions"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/createAccountButton"
            android:fontFamily="@font/interregular"
            android:textSize="13sp"
            android:textColor="#565656"
            android:text="Prvacy Policy"
            android:layout_height="wrap_content"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E3E3E3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/term_and_conditions" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createAccountTextView"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/already_have_near_account"
            android:layout_marginTop="30dp"
            android:theme="@style/text_14_px_regular"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_with_near"
            android:theme="@style/text_16_px_regular"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/createAccountTextView"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>