<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    tools:context=".main.view.login.NearLabsLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_yellow"
        app:layout_constraintBottom_toTopOf="@id/bottomConstraintLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_login_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:src="@drawable/near_logo" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:contentPaddingBottom="3dp"
                app:contentPaddingLeft="9dp"
                app:contentPaddingRight="9dp"
                app:contentPaddingTop="3dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labs"
                    android:textColor="@color/black"
                    android:theme="@style/text_14_px_bold" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_from_left_edge"
        android:layout_marginEnd="@dimen/margin_from_right_edge">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupButtonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:divider="@drawable/material_button_divider"
            android:showDividers="middle"
            app:checkedButton="@id/emailButton"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emailButton"
                style="@style/login_Material_ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/email"
                android:textAllCaps="false"
                app:elevation="0dp"

                app:strokeColor="#33FFFFFF" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/phoneButton"
                style="@style/login_Material_ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/phone"
                android:textAllCaps="false"
                app:elevation="0dp"
                app:strokeColor="#33FFFFFF" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/round_corner_edittext"
            android:hint="@string/email_address"
            android:fontFamily="@font/interregular"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/gray3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/groupButtonToggleGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartButton"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/get_started"
            android:theme="@style/text_16_px_regular"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_marginTop="5dp"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:backgroundTint="@color/gray4"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/userInputEditText"
            android:layout_height="wrap_content"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/getStartButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#E3E3E3"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createAccountTextView"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/already_have_near_account"
            android:layout_marginTop="20dp"
            android:theme="@style/text_14_px_regular"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/round_corner_edittext"
            android:hint="@string/walletname_near"
            android:fontFamily="@font/interregular"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/gray3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/createAccountTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:theme="@style/text_16_px_regular"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_marginTop="5dp"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/term_and_conditions"
            app:layout_constraintTop_toBottomOf="@id/accountInputEditText"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/term_and_conditions"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/interregular"
            android:textSize="13sp"
            android:textColor="#565656"
            android:text="Prvacy Policy"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>